--- a/ImageCollection/ImageCollection/Base.lproj/Main.storyboard
+++ b/ImageCollection/ImageCollection/Base.lproj/Main.storyboard
@@ -135,11 +135,11 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aNU-0b-alx">
-                                <rect key="frame" x="10" y="255" width="394" height="592"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" indicatorStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="aNU-0b-alx">
+                                <rect key="frame" x="10" y="235" width="394" height="592"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="equalCentering" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="vjA-tv-3xl">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="587"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="fillEqually" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="vjA-tv-3xl">
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="592"/>
                                         <color key="backgroundColor" red="0.91352076510000002" green="1" blue="0.99080196669999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <userDefinedRuntimeAttributes>
@@ -150,11 +150,11 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="vjA-tv-3xl" secondAttribute="trailing" id="6YB-kh-h9P"/>
-                                    <constraint firstItem="vjA-tv-3xl" firstAttribute="top" secondItem="aNU-0b-alx" secondAttribute="top" id="BmM-VH-Q5y"/>
-                                    <constraint firstItem="vjA-tv-3xl" firstAttribute="leading" secondItem="aNU-0b-alx" secondAttribute="leading" id="ITx-Zf-s8S"/>
-                                    <constraint firstAttribute="bottom" secondItem="vjA-tv-3xl" secondAttribute="bottom" id="wvm-kJ-YUO"/>
-                                    <constraint firstItem="vjA-tv-3xl" firstAttribute="width" secondItem="aNU-0b-alx" secondAttribute="width" id="zuf-ZK-ahw"/>
+                                    <constraint firstAttribute="trailing" secondItem="vjA-tv-3xl" secondAttribute="trailing" id="68T-pm-i2U"/>
+                                    <constraint firstAttribute="bottom" secondItem="vjA-tv-3xl" secondAttribute="bottom" id="Dih-Yc-tCW"/>
+                                    <constraint firstItem="vjA-tv-3xl" firstAttribute="top" secondItem="aNU-0b-alx" secondAttribute="top" id="b6k-5o-vlA"/>
+                                    <constraint firstItem="vjA-tv-3xl" firstAttribute="width" secondItem="aNU-0b-alx" secondAttribute="width" id="scj-ea-r4c"/>
+                                    <constraint firstItem="vjA-tv-3xl" firstAttribute="leading" secondItem="aNU-0b-alx" secondAttribute="leading" id="vts-0j-wC8"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="brY-jH-lkt"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="BKQ-BW-beh"/>
@@ -164,12 +164,12 @@
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <constraints>
                             <constraint firstItem="k1K-tV-uf7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="6i9-sm-R5x"/>
-                            <constraint firstItem="aNU-0b-alx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="8w2-1u-APS"/>
                             <constraint firstItem="k1K-tV-uf7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="28" id="95Y-Tg-OgG"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aNU-0b-alx" secondAttribute="trailing" constant="10" id="GGr-NT-BMo"/>
-                            <constraint firstItem="aNU-0b-alx" firstAttribute="top" secondItem="k1K-tV-uf7" secondAttribute="bottom" constant="10" id="Pmd-ON-H5C"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aNU-0b-alx" secondAttribute="trailing" constant="10" id="HoY-zU-lsm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aNU-0b-alx" secondAttribute="bottom" constant="15" id="I3n-DM-AX0"/>
+                            <constraint firstItem="aNU-0b-alx" firstAttribute="top" secondItem="k1K-tV-uf7" secondAttribute="bottom" constant="10" id="Z1M-HZ-9tZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="k1K-tV-uf7" secondAttribute="trailing" constant="35" id="dpJ-0I-PyL"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aNU-0b-alx" secondAttribute="bottom" constant="15" id="kT5-6O-ZdN"/>
+                            <constraint firstItem="aNU-0b-alx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="yfQ-an-hxG"/>
                         </constraints>
                     </view>
                     <connections>
