--- a/NavigationApp/NavigationApp/Base.lproj/Main.storyboard
+++ b/NavigationApp/NavigationApp/Base.lproj/Main.storyboard
@@ -1,24 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="NavigationApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="User Profile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="chk-Fz-DPo">
+                                <rect key="frame" x="61" y="81" width="281" height="55"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ucv-cT-UV3" customClass="RoundedeShadowView" customModule="NavigationApp" customModuleProvider="target">
+                                <rect key="frame" x="41.5" y="172" width="331" height="552"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="tea-PL-F5E">
+                                        <rect key="frame" x="25" y="25" width="281" height="502"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KFs-a9-CMt">
+                                                <rect key="frame" x="0.0" y="0.0" width="281" height="50"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Anastasiya Soiko" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zbq-IX-h0g">
+                                                        <rect key="frame" x="118" y="5" width="148" height="40"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26g-K0-YSW">
+                                                        <rect key="frame" x="15" y="5" width="98" height="24"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="26g-K0-YSW" firstAttribute="top" secondItem="KFs-a9-CMt" secondAttribute="top" constant="5" id="5ew-2H-yLX"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Zbq-IX-h0g" secondAttribute="trailing" constant="15" id="5io-yb-WBT"/>
+                                                    <constraint firstItem="Zbq-IX-h0g" firstAttribute="top" secondItem="KFs-a9-CMt" secondAttribute="top" constant="5" id="UO6-3c-1RG"/>
+                                                    <constraint firstItem="26g-K0-YSW" firstAttribute="leading" secondItem="KFs-a9-CMt" secondAttribute="leading" constant="15" id="bn0-r6-3Ig"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Zbq-IX-h0g" secondAttribute="bottom" constant="5" id="cWP-Ps-ZQf"/>
+                                                    <constraint firstItem="Zbq-IX-h0g" firstAttribute="leading" secondItem="26g-K0-YSW" secondAttribute="trailing" constant="5" id="oxX-dr-xXT"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LAH-RW-BW1">
+                                                <rect key="frame" x="0.0" y="75" width="281" height="427"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Anastasiya Soiko" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rjV-fE-udP">
+                                                        <rect key="frame" x="118" y="5" width="148" height="417"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1KP-A1-YwS">
+                                                        <rect key="frame" x="15" y="5" width="98" height="24"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="rjV-fE-udP" secondAttribute="bottom" constant="5" id="7KX-jD-1Rl"/>
+                                                    <constraint firstItem="1KP-A1-YwS" firstAttribute="top" secondItem="LAH-RW-BW1" secondAttribute="top" constant="5" id="AgR-PJ-MoJ"/>
+                                                    <constraint firstItem="rjV-fE-udP" firstAttribute="top" secondItem="LAH-RW-BW1" secondAttribute="top" constant="5" id="BOP-ho-I1E"/>
+                                                    <constraint firstAttribute="trailing" secondItem="rjV-fE-udP" secondAttribute="trailing" constant="15" id="YYt-5r-hGl"/>
+                                                    <constraint firstItem="rjV-fE-udP" firstAttribute="leading" secondItem="1KP-A1-YwS" secondAttribute="trailing" constant="5" id="fea-Wd-4ua"/>
+                                                    <constraint firstItem="1KP-A1-YwS" firstAttribute="leading" secondItem="LAH-RW-BW1" secondAttribute="leading" constant="15" id="yXZ-jv-G8N"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.91838000562737165" green="1" blue="0.89634766289054435" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ucv-cT-UV3" secondAttribute="height" multiplier="3:5" id="1os-xt-180"/>
+                                    <constraint firstAttribute="trailing" secondItem="tea-PL-F5E" secondAttribute="trailing" constant="25" id="5RB-5O-V7j"/>
+                                    <constraint firstItem="tea-PL-F5E" firstAttribute="top" secondItem="ucv-cT-UV3" secondAttribute="top" constant="25" id="Ahc-ZY-mHD"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="tea-PL-F5E" secondAttribute="bottom" constant="25" id="Izl-JJ-FWq"/>
+                                    <constraint firstItem="tea-PL-F5E" firstAttribute="leading" secondItem="ucv-cT-UV3" secondAttribute="leading" constant="25" id="wV9-tA-VhB"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                        <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="chk-Fz-DPo" secondAttribute="trailing" constant="72" id="7xg-eO-GK0"/>
+                            <constraint firstItem="chk-Fz-DPo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="61" id="84G-KN-vPH"/>
+                            <constraint firstItem="chk-Fz-DPo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="37" id="FQ5-Fk-07F"/>
+                            <constraint firstItem="ucv-cT-UV3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dB6-Ko-fM9"/>
+                            <constraint firstItem="ucv-cT-UV3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="128" id="kPP-8t-ays"/>
+                            <constraint firstItem="ucv-cT-UV3" firstAttribute="top" secondItem="chk-Fz-DPo" secondAttribute="bottom" constant="69" id="qXJ-lR-lTO"/>
+                            <constraint firstItem="ucv-cT-UV3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="v3s-Ay-1F1"/>
+                            <constraint firstItem="ucv-cT-UV3" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="yAC-54-xaP"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="maneView" destination="ucv-cT-UV3" id="bLa-Zj-rPu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-213.04347826086959" y="93.75"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
